objects/Intuit__c.object
<CustomObject>
    <description>Just For Testing Purpose Only</description>
    <fields>
        <fullName>Intuit_Field1__c</fullName>
        <description>Filed 1</description>
        <inlineHelpText>Incremental</inlineHelpText>
        <label>Intuit Field1</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Intuit_Field2__c</fullName>
        <description>Field 2</description>
        <inlineHelpText>Incremental</inlineHelpText>
        <label>Intuit Field2</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Intuit_Field3__c</fullName>
        <description>Sample Test</description>
        <inlineHelpText>jfsdfjdslfsdjf</inlineHelpText>
        <label>Intuit Field3</label>
        <required>true</required>
        <type>Phone</type>
    </fields>
    <label>Intuit 17580</label>
    <nameField>
        <label>Intuit  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Intuits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>